v2.1/01_프로젝트_개요서.md
# 01_프로젝트_개요서

<!-- latest-update-2026-06 -->

> **문서 버전**: v2.1  
> **프로젝트명**: 춘배투어 (ChunBae Tour)  
> **최신 반영일**: 2026-06-22  
> **반영 기준**: 최종 API 명세, 최신 ERD 이미지, 백엔드 develop 기준 도메인 구조, ECS Fargate 운영 전환, 실제 코드·git 커밋 기반 기술 스택 및 팀 역할 검증

## 0. 2026-06 최종 반영 요약

춘배투어는 단순 관광지 조회 서비스가 아니라, **관광지·전통시장·축제 탐색**, **지도/길찾기**, **검색/추천**, **커뮤니티·동행·채팅**, **상점·상인·결제·엽전**, **신고·제재·CS·알림·번역**, **관리자 운영**까지 포함하는 위치 기반 여행 플랫폼이다.

| 영역 | 최종 반영 내용 |
| --- | --- |
| 관광/지도 | 관광지 목록/상세, 지도 마커, 내 주변 관광지, 주변 관광지/상점, 카카오 길찾기, 지오코딩/리버스 지오코딩 |
| 검색 | 통합 검색, 장소/축제 검색, 인기 검색어, 최근 검색어, 자동완성, 오타 교정, 비집계 track/source 정책 |
| 전통시장/축제 | 전통시장 위치 기반 조회/상세/찜, 축제 목록/상세/캘린더/찜/관리자 수집 |
| 커뮤니티/동행 | 자유게시글, 동행게시글, 댓글, 동행 채팅방, 참여 신청, 동행 리뷰 |
| 실시간 채팅/CS | STOMP 메시징, Redis Pub/Sub, 채팅 파일, 고객센터 상담방/상담 메시지/파일 |
| 결제/엽전/스토어 | 충전, 환불, QR 결제, PortOne Webhook, 엽전 지갑/이력, 상품/주문/보유 아이템 |
| 상인/가게 | 상인 신청, 내 가게, 메뉴, 공지, 이미지, 정산, 광고, QR, 관리자 심사 |
| 운영/관리자 | 사용자/신고/제재/배너/장소/축제/상점/결제/정산/광고 관리, 감사 로그 |
| 인프라 | EC2 직접 배포에서 ECS Fargate + ALB + ECR + RDS + ElastiCache Redis Cluster 기반으로 전환 |

### 최종 서비스 가치

- 여행자는 현재 위치와 관심 키워드를 기준으로 관광지, 축제, 전통시장, 주변 상점을 탐색할 수 있다.
- 사용자는 커뮤니티와 채팅을 통해 동행을 구하고, 번역/알림을 통해 소통 장벽을 낮출 수 있다.
- 상인은 가게와 메뉴를 관리하고 QR 결제, 정산, 광고 기능으로 플랫폼 안에서 영업 활동을 할 수 있다.
- 관리자는 신고/제재/콘텐츠/상인/결제/정산을 운영 도구로 관리할 수 있다.

---

## 1. 프로젝트 개요

| 항목 | 내용 |
| --- | --- |
| **프로젝트명** | 춘배투어 (ChunBae Tour) |
| **프로젝트 유형** | 위치기반 관광지·전통시장·투어 플랫폼 |
| **개발 기간** | 2026.05.12 ~ 2026.06.22 (총 6주) |
| **팀 구성** | 백엔드 개발자 5명 (경력 4개월) |
| **중간 발표일** | 2026.05.29 |
| **최종 발표일** | 2026.06.23 |
| **플랫폼** | 웹 (PWA) |

---

## 2. 프로젝트 주제

저희 프로젝트는 **위치기반 관광지 매칭·투어 플랫폼**입니다.

이 서비스는 사용자의 현재 위치를 기반으로 주변 관광지와 전통시장 정보를 제공하고, 길찾기, 축제 정보, 커뮤니티, 채팅, 매칭 등의 기능을 통해 더 편리하고 즐거운 여행 경험을 제공하는 것을 목표로 합니다.

---

## 3. 프로젝트 기획 배경

외국인 관광객이 한국을 여행할 때는 여러 불편함을 겪을 수 있습니다.

어떤 관광지를 가야 할지 찾기 어렵거나, 전통시장에 대한 정보가 부족하거나, 이동 경로를 확인하기 번거로울 수 있습니다. 또한 언어와 문화 차이로 인해 현지 사람들과 자연스럽게 소통하기 어려운 경우도 있습니다.

여기에 더해, 현실에서는 **카드 수수료 문제로 상인들이 현금 결제를 선호**하고, 일부에서는 외국인 관광객에게 바가지를 씌우는 사례도 발생하고 있습니다. 이런 불신의 구조를 끊어내고, 상인과 소비자 모두가 신뢰할 수 있는 결제 환경을 만들고자 **엽전 시스템**을 설계하였습니다. 이를 통해 외국인도 언어적 장벽 없이 편리하게 결제할 수 있는 환경을 구현하고자 합니다.

저희는 이런 문제들을 해결하기 위해, 관광지와 전통시장 정보를 한곳에서 확인하고, 위치를 기반으로 가까운 장소를 추천 받으며, 함께 여행할 사람과 연결될 수 있는 서비스를 기획했습니다.

### 핵심 Pain Point 요약

| # | 대상 | 문제 상황 | 해결 방향 |
| --- | --- | --- | --- |
| P1 | 외국인 관광객+국내 여행자 | 관광지·시장 정보를 한 곳에서 찾기 어렵다 | 위치 기반 통합 탐색 |
| P2 | 외국인 관광객 | 전통 시장에서 언어 소통이 안 돼 결제가 불편하다 | 엽전 시스템 + 번역 기능 |
| P3 | 외국인 관광객 | 바가지 요금이 두렵다 | 상인 인증 마크 + 표준 가격 결제 |
| P4 | 국내 여행자+외국인 관광객 | 혼자 여행하기 불안하고, 동행을 구하기 어렵다 | 커뮤니티 + 채팅 동행 매칭 + 번역 기능 |
| P5 | 전통시장 상인 | 카드 수수료 부담, 현금 선호 구조 | 엽전 기반 수수료 절감 결제 |
| P6 | 모든 사용자 | 이미 가본 곳 말고 새로운 곳을 찾고 싶다 | 방문 이력 기반 개인화 추천 (추후 확장) |

---

## 4. 프로젝트 목표

저희 프로젝트의 목표는 **여행을 더 편리하고, 더 기억에 남는 경험으로 만드는 것**입니다.

**외국인 관광객**에게는 한국 관광지와 전통시장을 더 쉽게 찾고 즐길 수 있는 환경을 제공하고자 합니다. 한국 여행 중 필요한 위치 정보, 길찾기, 축제 일정, 커뮤니티, 채팅 기능을 통해 여행 과정에서의 불편함을 줄이는 것이 목표입니다.

**한국인 사용자**에게는 외국인과 함께 투어를 하며 자연스럽게 소통할 수 있는 기회를 제공하고자 합니다. 해외에 나가지 않아도 다양한 문화와 사람들을 경험하며, 더 넓은 시야를 가질 수 있도록 돕는 것이 저희 서비스의 또 다른 목적입니다.

추후 확장 단계에서는 Redis 기반 방문 이력 데이터를 활용하여, 사용자가 이미 다녀간 곳이 아닌 **아직 경험하지 못한 새로운 장소와 맛집을 우선 추천**하는 개인화된 여행 경험을 제공하는 것을 목표로 합니다.

---

## 5. 서비스 방향

저희 서비스는 단순한 관광 정보 제공 사이트가 아닙니다.

사용자가 현재 위치를 기준으로 주변 관광지와 전통시장을 탐색하고, 관심 있는 장소의 상세 정보를 확인한 뒤 길찾기를 통해 이동할 수 있습니다. 또한 캘린더를 통해 축제나 행사 정보를 확인하고, 단체 채팅방을 통해 함께 여행할 사람들과 소통할 수 있습니다.

더 나아가 상인은 자신의 가게 정보와 메뉴를 직접 관리할 수 있고, 관리자는 유저·상인·신고 내역·관광지·축제 정보·광고 등을 관리할 수 있도록 구성하여 **실제 운영 가능한 플랫폼 구조**를 목표로 하고 있습니다.

---

## 6. 경쟁 서비스 분석

| 항목 | 네이버 지도 | 트립어드바이저 | 에어비앤비 체험 | **춘배투어** |
| --- | --- | --- | --- | --- |
| 위치 기반 탐색 | ✅ | ✅ | 부분 (지역·도시 기반) | ✅ |
| 전통시장 정보 | 부분 | ❌ | ❌ | ✅ |
| 축제 캘린더 | ❌ | ❌ | ❌ | ✅ |
| 동행 매칭 | ❌ | ❌ | ❌ | ✅ |
| 실시간 채팅 | ❌ | ❌ | 메시지만 | ✅ |
| 번역 기능 | 부분 (파파고 연동) | 부분 (다국어 UI·리뷰 자동번역) | 부분 (메시지 자동번역) | ✅ (채팅방 메시지 번역) |
| 외국인 특화 결제 | ❌ | ❌ | 부분 (국제결제, 현지화 수단 없음) | ✅ (엽전, 결제 화면 번역은 PG사 제공 기능 활용) |
| 상인 인증 | 부분 (플레이스 공식 인증) | 부분 (스폰서·검증 표시) | ✅ | ✅ |

---

## 7. 서비스 범위 및 핵심 기능

### 7.1 핵심 도메인 및 기능

| 도메인 | 주요 기능 | 담당자 |
| --- | --- | --- |
| **회원/인증/마이페이지/관리자** | 회원가입, 로그인(JWT), 권한 관리, 마이페이지, 관리자 | 정민교 |
| **관광지/지도/검색/찜** | 위치 기반 관광지 탐색, 길찾기, 인기 검색어, 관광지 리뷰(별점), 찜 (관광지·전통시장·축제) | 김인목 |
| **커뮤니티/신고/축제·캘린더** | 게시글·댓글, 신고, 축제 목록·상세·캘린더, 축제 데이터 수집 | 박경화 |
| **채팅/CS/알림/번역** | 단체 채팅방, 실시간 메시지, 고객센터 상담, 동행 리뷰, 번역(채팅방), 알림 | 임하은 |
| **스토어/결제/상인/엽전/전통시장** | 엽전 충전·소비, 상품 구매, 상인 가게 관리, 광고, 상인 인증 마크, 전통시장 조회·데이터 수집 | 신현민 |

### 7.2 MVP 범위 (2주 내 완성 목표)

> ⚠️ `← 추후` 태그가 붙은 기능은 MVP 제외, 발표 이후 확장 예정
> 

**MVP 포함 기능**

> 결제 화면 번역은 PG사 제공 기능을 활용하며, 채팅/번역 담당 도메인의 MVP 범위에는 포함하지 않는다.
방문 이력 기반 개인화 추천은 추후 확장 기능으로 분리한다.
MVP 알림은 채팅 알림 및 고객센터 알림을 구현하며, 결제/상인/관리자 알림은 추후 확장으로 분리한다.
> 
- 회원가입 / 로그인 (일반·소셜) / 마이페이지 / 찜 (관광지·전통시장·축제)
- 위치 기반 관광지·전통시장 탐색 (Redis Geospatial)
- 길찾기 (카카오맵 API 연동)
- 관광지·축제 전체 조회 및 캘린더
- 관광지 리뷰(별점)
- 인기 검색어 (Redis ZSet) / 최근 검색어 / 자동완성 / 오타 교정
- 커뮤니티 게시글·댓글
- 신고
- 단체 채팅방, 실시간 메시지 (WebSocket / STOMP)
- 동행 채팅방 참여 신청
- 고객센터 실시간 상담 채팅
- 채팅방 메시지 번역 기능
- 채팅 알림 (새 메시지, 참여 신청/승인/거절, 강퇴, 방장 위임) + 고객센터 알림 (새 메시지, 상담 종료)
- 엽전 충전·소비·결제 / QR 결제 / 환불
- 배너 광고
- 관리자 기능
- 상인 가게 관리 / 상인 인증 마크 / 정산 신청 / 상인 광고 신청
- 스토어 상품 구매 / 주문 / 보유 아이템
- 동행 리뷰

**MVP 제외 (추후 확장)**
- AI 개인 추천 코스
- 방문 이력 기반 개인화 추천
- 랜덤 매칭
- 날씨 구현 / 땅따먹기
- 뱃지 / 쿠폰 / 프로필 레벨
- 결제/상인/관리자 알림 (추후 확장)
- AI 음성 기능 / TTS
- FAQ AI 답변

### 7.3 페이지 / 권한 구조

춘배투어의 화면은 **일반 사용자 페이지 / 상인 페이지 / 관리자 페이지**로 분리한다. 로그인은 가능하면 통합 로그인으로 처리하고, API 접근 권한은 `USER`, `MERCHANT`, `ADMIN` Role 기반으로 제한한다.

**상인 권한 흐름**

```
일반 회원가입
→ USER 계정 생성
→ 상인 등록 신청
→ 관리자 승인
→ role이 MERCHANT로 변경
→ 상인 페이지 접근 가능
```

**Role별 기능 범위**

| Role | 기능 범위 |
| --- | --- |
| USER | 일반 사용자 기능, 프로필, 찜, 리뷰, 결제 |
| MERCHANT | USER 기능 포함, 내 가게 관리, 메뉴 관리, 광고 신청, 정산 신청 (상인도 일반 사용자로서 관광지 탐색·축제 캘린더·동행 매칭·스토어 이용 가능) |
| ADMIN | 관리자 대시보드, 유저 관리, 상인 승인/거절, 가게 관리, 신고 처리, 광고/정산/인증 심사 |

> ⚠️ MERCHANT의 USER 기능 접근은 현재 일부 API만 허용 상태이며, 전체 USER 기능 개방은 추후 확장 예정이다.

상인 본인용 API와 관리자 관리용 API는 분리한다.

```
상인 본인용: GET /api/v1/merchants/me/shop
관리자 관리용: GET /api/v1/admin/shops/{shopId}
관리자 관리용: PATCH /api/v1/admin/shops/{shopId}
```

---

## 8. 기술 스택

| 영역 | 기술 |
| --- | --- |
| **언어 / 프레임워크** | Java 21, Spring Boot 4.0.6 |
| **데이터 접근** | Spring Data JPA, QueryDSL, Hibernate Spatial |
| **데이터베이스** | MySQL (RDS) |
| **DB 마이그레이션** | Flyway (flyway-core, flyway-mysql) |
| **API 문서** | Swagger UI (springdoc-openapi 3.0.3) |
| **캐시 / 메시징** | Redis (ZSet, Geospatial, Pub/Sub, 분산 락) |
| **실시간 통신** | WebSocket, STOMP |
| **인증 / 보안** | JWT, Spring Security |
| **인프라** | AWS ECS Fargate, ALB, ECR, RDS, ElastiCache Redis Cluster, S3 |
| **CI/CD** | GitHub Actions, Docker |
| **프론트엔드** | JavaScript, React 19, Vite 8, CSS3, Framer Motion, PWA, WebSocket (STOMP), pnpm, ESLint, Playwright |
| **테스트** | Spring Boot Test, Testcontainers (MySQL, JUnit 5) |
| **보안/파일 검증** | Apache Tika, Apache POI (magic-byte 위장 업로드 차단) |
| **분산 스케줄링** | ShedLock (다중 인스턴스 @Scheduled 중복 방지) |
| **로그/모니터링** | Grafana, Prometheus, Logstash (logstash-logback-encoder) |
| **외부 API** | KakaoMap API (길찾기, 지오코딩, 리버스 지오코딩), Kakao OAuth / Naver OAuth (소셜 로그인), 한국관광공사 Tour API (관광지·축제·전통시장 데이터 수집), PG사 PortOne (결제 및 결제 화면 번역), Google Cloud Translation API (채팅방 메시지 번역) |

---

## 9. 프로젝트 일정

| 주차 | 기간 | 내용 |
| --- | --- | --- |
| **1주차** | 05/12 ~ 05/17 | 설계 (SA 문서, ERD, API 명세, 화면 설계, Figma) |
| **2~3주차** | 05/18 ~ 05/28 | 개발 (백엔드 + 프론트엔드 + 배포) |
| 중간 발표회 | 05/29 | 중간 발표 및 피드백 |
| **4주차** | 06/01 ~ 06/07 | 피드백 반영 및 버그 수정, 2차 Scope 진행 |
| **5주차** | 06/08 ~ 06/14 | 2차 Scope 진행, QA, 통합 테스트 |
| **6주차** | 06/15 ~ 06/22 | 발표 자료 준비 및 제출, README 및 SA 문서(개요서·ERD·API 명세 등) 최종 정리 |
| **최종 발표회** | 06/23 | 최종 발표 |

---

## 10. 팀 구성 및 역할

| 이름 | 담당 도메인 | 핵심 기술 책임 |
| --- | --- | --- |
| 정민교 | 회원 / 인증 / 마이페이지 / 관리자 / 배포·인프라 | JWT, Spring Security, GitHub Actions, ECS Fargate, ECR, RDS, ElastiCache, S3, Grafana/Prometheus |
| 김인목 | 관광지 / 지도 / 검색 / 찜 | Redis Geospatial, Redis ZSet, KakaoMap API, 동시성 처리 |
| 박경화 | 커뮤니티 / 신고 / 축제·캘린더 / 축제 데이터 수집 | CRUD, 한국관광공사 Tour API |
| 임하은 | 채팅 / CS / 동행 리뷰 / 알림 / 번역 | WebSocket, STOMP, Redis Pub/Sub, Google Translation API |
| 신현민 | 스토어 / 결제 / 상인 / 엽전 / 전통시장 / 관광지·전통시장 데이터 수집 / 프론트엔드 | PG 연동, PortOne Webhook, 분산 락, 동시성 제어, 한국관광공사 Tour API |

---

## 11. 기대 효과

| 관점 | 기대 효과 |
| --- | --- |
| **외국인 관광객** | 언어 장벽 없이 한국 문화를 탐색하고 결제할 수 있는 환경 제공, 채팅 번역으로 현지인과 자유로운 동행·소통 가능 |
| **국내 여행자** | 혼자 여행 시 동행 매칭으로 더 풍부한 여행 경험, 동행 리뷰 시스템으로 신뢰 기반 동행 선택 가능 |
| **전통시장 상인** | 엽전 결제·QR 결제로 수수료 부담 완화 및 외국인 고객 접근성 향상, 광고·정산 신청으로 매출 가시성과 마케팅 채널 확보 |
| **관광 생태계** | 전통시장·관광지·축제 활성화에 기여하는 디지털 인프라 구축 (축제 캘린더로 일정 접근성 향상) |
| **플랫폼 운영자** | 신고·제재·감사 로그 기반 투명한 운영 가능, 상인 심사·광고·정산을 통합 관리 도구로 처리 |

---

## 12. 용어 정의

| 용어 | 정의 |
| --- | --- |
| **엽전** | 춘배투어 내 전용 가상 화폐. 실제 결제 후 충전하여 전통시장 상점 결제 및 스토어 상품 구매에 사용 |
| **상인 인증 마크** | 운영자가 검증한 믿을 수 있는 상인에게 부여되는 공식 인증 |
| **동행 매칭** | 커뮤니티 동행 게시글을 통해 같이 여행할 사람을 모집하고, 채팅방으로 연결되는 기능 |
| **QR 결제** | 상인이 발급한 QR 코드를 스캔하여 엽전으로 결제하는 방식 |
| **CS (고객센터)** | 사용자와 운영자가 실시간 채팅으로 문의·상담을 처리하는 고객 지원 기능 |
| **인기 검색어** | 실시간으로 집계한 검색어 순위. 많이 검색된 키워드를 상위에 노출 |

---

*본 문서는 SA 설계 과정에서 지속적으로 업데이트됩니다.*
